--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,18 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+bower_components
+
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# Completed Courses w/ json-server
+fullstack-c3
+fullstack-c4
+
+# Mongodb data
+mongodb
